fixed spacing

--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,6 @@ h2, h3, h4, h5 {
 }
 
 .highlight-text {
-    margin-top: 1em;
     display: block;
     width: auto;
     margin-right: auto;
